--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,15 @@
         android:theme="@style/Theme.OnPoint"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.RegisterActivity"
+            android:name=".Activity.MainActivity"
             android:exported="false"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".Activity.MainActivity"
+            android:name=".Activity.RegisterActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activity.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
